# Pyrite-old-

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  azure-pipelines.yml
.github/workflows/: ci.yml  rust.yml
imgui/: Cargo.toml  build.rs
imgui-sys/: Cargo.toml  build.rs  wrapper.hpp
imgui/src/: api.rs  flags.rs  imstr.rs  lib.rs
imgui/src/impls/: glutin.rs  mod.rs  opengl3.rs
pyrite/: Cargo.toml
pyrite-arm/: .gitignore  Cargo.toml
pyrite-arm/data/: link.ld
pyrite-arm/data/asm/: arm_division.s  startup.s
pyrite-arm/data/include/: testlib.h
pyrite-arm/data/src/: chacha20.c
pyrite-arm/src/: alu.rs  clock.rs  cpu.rs  disasm.rs  flat_memory.rs  lib.rs  memory.rs  registers.rs
pyrite-arm/src/arm/: instr_block_data_transfer.rs  instr_coprocessor.rs  instr_dataproc.rs  instr_hws_data_transfer.rs  instr_mul.rs  instr_single_data_transfer.rs  mod.rs
pyrite-arm/src/thumb/: instr.rs  mod.rs
pyrite-arm/tests/: arm_tests.rs  util.rs
pyrite-common/: Cargo.toml
pyrite-common/src/: lib.rs  macros.rs  shared.rs
pyrite-gba/: Cargo.toml
pyrite-gba/benches/: frame_benchmark.rs
pyrite-gba/src/: dma.rs  hardware.rs  ioregs.rs  irq.rs  keypad.rs  lib.rs  scheduler.rs  sysctl.rs  timers.rs
pyrite-gba/src/audio/: mod.rs
pyrite-gba/src/lcd/: bitmap.rs  bitmap_modes.rs  blending.rs  effects.rs  mod.rs  modes.rs  obj.rs  palette.rs  text.rs  tile.rs  tile_modes.rs
pyrite-gba/src/memory/: gamepak.rs  ioreg.rs  mod.rs  palette.rs
pyrite-gba/src/util/: array.rs  bitfields.rs  fixedpoint.rs  memory.rs  mod.rs
pyrite-gba/tests/: graphics.rs  util.rs
pyrite/src/: debugger.rs  logger.rs  main.rs
pyrite/src/gba_imgui/: mod.rs
pyrite/src/gba_imgui/widgets/: disassembly.rs  memory_editor.rs  mod.rs
pyrite/src/gui/: mod.rs
pyrite/src/platform/: mod.rs
pyrite/src/platform/audio/: mod.rs
pyrite/src/platform/glutin/: window.rs
pyrite/src/platform/opengl/: gba.rs  globj.rs  mod.rs
pyrite/src/util/: circular_buffer.rs  mod.rs
roms-src/: Makefile
roms-src/test/: Makefile
roms-src/test/include/: test.h  timer_ext.h  video_ext.h
roms-src/test/mode3/source/: mode3.c
roms-src/test/mode4/: .gitignore  Makefile
roms-src/test/mode4/source/: mode4.c
roms-src/test/sound_test/source/: sound_test.c
roms-src/test/timer-stress/source/: template.c
roms/audio/: README.md
roms/legal/: README.md
roms/suite/: tags
roms/test/: mode3.gba  mode4.gba  sound_test.gba  timer-stress.gba
roms/tonc/: README.md
roms/wrestle/: README.md
roms/wrestle/source/: armwrestler.s  thumbwrestler.s
tools/codegen/: disasm_table.js
tools/linux/: assemble-tests  doc.sh  gba-disasm
