[package]
name = "imgui"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
opengl3 = ["gl"]

[dependencies]
bitflags = "1.2"
gl = { version = "0.14.0", optional = true }
glutin = { version = "0.22.0", optional = true }

[build-dependencies]
cc = "1.0"
bindgen = "0.46"
