[package]
name = "pyrite-arm"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

[features]
# When this is feature is enabled the `register_change_location` method of `ArmRegisters` will
# return the last location at which a given register was written to.
track_register_writes = []

[dependencies]
pyrite-common = { path = "../pyrite-common" }
log = { version = "0.4", features = ["std"] }
