[package]
name = "pyrite"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrite-gba = { path = "../pyrite-gba" }
gl = "0.13.0"
glutin = "0.21.1"
log = { version = "0.4", features = ["std"] }
imgui = { path = "../imgui", features = ["gl", "opengl3", "glutin"] }
