[package]
name = "pyrite"
version = "0.1.0"
authors = ["Adolph C. <adolphc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrite-arm = { path = "../pyrite-arm" }
pyrite-gba = { path = "../pyrite-gba" }
pyrite-common = { path = "../pyrite-common" }
gl = { version = "0.14.0" }
glutin = { version = "0.24" }
log = { version = "0.4", features = ["std"] }
termcolor = { version = "1.1" }
miniaudio = { version = "0.8" }
